# tron-vanity-metal

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  build.sh
src/: address.rs  difficulty.rs  hardware.rs  lib.rs  main.rs  range_check.rs  search.rs  stats.rs
src/gpu/: keccak.metal  math.metal  mod.rs  native_search.rs  pipeline.rs  search.rs  search_native.metal  search_suffix.metal  sha256.metal
tests/: gpu_cpu_consistency.rs
